# cpp-y2018

./: README.md
exam/: CMakeLists.txt  list.h  std.cpp  tests.inl
homeworks/hw1/: mul.asm  sub.asm  wordcnt_file.asm
homeworks/hw2/: CMakeCache.txt  CMakeLists.txt  Makefile  big_integer.cpp  big_integer.h  big_integer_testing  cmake_install.cmake
homeworks/hw3/: BIGINT_HW3.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  big_integer.cpp  big_integer.h  big_integer_testing  cmake_install.cmake  uintvector.cpp  uintvector.h
homeworks/hw4/: CMakeCache.txt  CMakeLists.txt  Makefile  big_integer_testing.cpp  cmake_install.cmake  hw4  hw4.cbp  main.cpp
homeworks/hw4/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  huffman.cbp  huffman_dec.cpp  huffman_dec.h  huffman_enc.cpp  huffman_enc.h  huffman_lib.h  huffman_tree.cpp  huffman_tree.h  power_bitset.h  symbol_counter.cpp  symbol_counter.h
homeworks/hw4/sample_text/: random_ascii.in
homeworks/hw4/testing/: CMakeLists.txt  Makefile  cmake_install.cmake  huffman_testing  huffman_testing.cbp  huffman_testing.cpp
homeworks/hw4/testing/tests/: damaged_alphabet.in  damaged_structure.in  random_unicode.in
